--- a/index.html
+++ b/index.html
@@ -11,16 +11,34 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
 
     <title>Frontend Mentor | Tip calculator app</title>
   </head>
   <body>
-    <h1>SPLITTER</h1>
-    Bill Select Tip % 5% 10% 15% 25% 50% Custom Number of People Tip Amount /
-    person Total / person Reset
-    </div>
+    <main>
+      <h1>SPLI</h1>
+      <h1>TTER</h1>
+      <section>
+        <div class="column-left">
+          <h3>Bill</h3>
+          <input type="text" name="bill-amount" id="" placeholder="$" />
+          Select Tip % 5% 10% 15% 25% 50% Custom Number of People
+        </div>
+        <div class="column-right">
+          <h3>Tip Amount</h3>
+          <h4>/ person</h4>
+          <h3>Total</h3>
+          <h4>/ person</h4>
+          <button type="reset">Reset</button>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
