--- a/index.html
+++ b/index.html
@@ -28,24 +28,34 @@
         <h1>TTER</h1>
         <section>
           <div class="column-left">
-            <h3>Bill</h3>
+            <p>Bill</p>
             <input
               type="text"
               name="bill-amount"
               id="bill-amount"
               placeholder="$"
             />
-            Select Tip % 5% 10% 15% 25% 50% Custom Number of People
+            <p>Select Tip %</p>
+            <ul>
+              <li>5%</li>
+              <li>10%</li>
+              <li>15%</li>
+              <li>25%</li>
+              <li>50%</li>
+              <li>Custom</li>
+            </ul>
+            <p>Number of People</p>
+            <input type="text" name="" id="number-of-people" placeholder="**" />
           </div>
           <div class="column-right">
             <div>
-              <h3>Tip Amount</h3>
-              <h4>/ person</h4>
+              <p>Tip Amount</p>
+              <p>/ person</p>
             </div>
             <div class="tip-amount-display"></div>
             <div>
-              <h3>Total</h3>
-              <h4>/ person</h4>
+              <p>Total</p>
+              <p>/ person</p>
             </div>
             <div class="total-display"></div>
             <button type="reset">Reset</button>
