--- a/index.html
+++ b/index.html
@@ -48,16 +48,20 @@
             <input type="text" name="" id="number-of-people" placeholder="**" />
           </div>
           <div class="column-right">
-            <div>
-              <p>Tip Amount</p>
-              <p>/ person</p>
+            <div class="tip">
+              <div class="tip-heading">
+                <p>Tip Amount</p>
+                <p>/ person</p>
+              </div>
+              <div class="tip-amount-display">$4.27</div>
             </div>
-            <div class="tip-amount-display"></div>
-            <div>
-              <p>Total</p>
-              <p>/ person</p>
+            <div class="total">
+              <div class="total-heading">
+                <p>Total</p>
+                <p>/ person</p>
+              </div>
+              <div class="total-display">$32.79</div>
             </div>
-            <div class="total-display"></div>
             <button type="reset">Reset</button>
           </div>
         </section>
