Working on media queries for mobile display

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
   <body>
     <main>
       <div class="container">
-        <h1>SPLI</h1>
-        <h1>TTER</h1>
+        <div class="title">
+          <h1>SPLI</h1>
+          <h1>TTER</h1>
+        </div>
         <section>
           <div class="column-left">
             <p>Bill</p>
