--- a/index.html
+++ b/index.html
@@ -25,33 +25,29 @@
     <main>
       <div class="container">
         <div class="title">
-          <h1>SPLI</h1>
-          <h1>TTER</h1>
+          <h1>SPLI<br />TTER</h1>
         </div>
         <section>
           <div class="column-left">
             <p>Bill</p>
             <input
-              type="text"
+              type="number"
               name="bill-amount"
               class="bill-amount"
-              placeholder="$"
+              placeholder=""
             />
             <p>Select Tip %</p>
-            <ul>
-              <li>5%</li>
-              <li>10%</li>
-              <li>15%</li>
-              <li>25%</li>
-              <li>50%</li>
-              <li>Custom</li>
-            </ul>
+            <input type="button" value="5%" />
+            <input type="button" value="15%" />
+            <input type="button" value="25%" />
+            <input type="button" value="50%" />
+            <input type="button" value="Custom" />
             <p>Number of People</p>
             <input
-              type="text"
+              type="number"
               name=""
               class="number-of-people"
-              placeholder="**"
+              placeholder=""
             />
           </div>
           <div class="column-right">
