Fixed the styling on the tip percentage buttons so now they are flush with the left and right edges

--- a/index.html
+++ b/index.html
@@ -36,11 +36,15 @@
               placeholder=""
             />
             <p>Select Tip %</p>
-            <input type="button" value="5%" />
-            <input type="button" value="15%" />
-            <input type="button" value="25%" />
-            <input type="button" value="50%" />
-            <input type="button" value="Custom" />
+            <div class="tip-percentages">
+              <input class="tip-percentage" type="button" value="5%" />
+              <input class="tip-percentage" type="button" value="10%" />
+              <input class="tip-percentage" type="button" value="15%" />
+              <input class="tip-percentage" type="button" value="25%" />
+              <input class="tip-percentage" type="button" value="50%" />
+              <input class="tip-percentage" type="button" value="Custom" />
+            </div>
+
             <p>Number of People</p>
             <input
               type="number"
