Fixed the custom button to make it a text input so someone can write in their custom tip percentage

--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
               <input class="tip-percentage" type="button" value="15%" />
               <input class="tip-percentage" type="button" value="25%" />
               <input class="tip-percentage" type="button" value="50%" />
-              <input class="tip-percentage" type="button" value="Custom" />
+              <input
+                class="tip-percentage"
+                type="text"
+                name=""
+                id="tip-percentage-custom"
+                placeholder="Custom"
+              />
             </div>
 
             <p>Number of People</p>
