Fixed the hover and active states for all the buttons

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
   <body>
     <main>
       <div class="container">
-        <div class="title">
-          <h1>SPLI<br />TTER</h1>
-        </div>
+        <h1>SPLI<br />TTER</h1>
         <section>
           <div class="column-left">
             <p>Bill</p>
@@ -44,7 +42,7 @@
               <input class="tip-percentage" type="button" value="50%" />
               <input
                 class="tip-percentage"
-                type="text"
+                type="number"
                 name=""
                 id="tip-percentage-custom"
                 placeholder="Custom"
