Finished all styling for desktop and mobile devices

--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
   <body>
     <main>
       <div class="container">
-        <h1>SPLI<br />TTER</h1>
+        <div class="title">
+          <h1>SPLI<br />TTER</h1>
+        </div>
         <section>
           <div class="column-left">
-            <p>Bill</p>
+            <p class="exclude">Bill</p>
             <input
               type="number"
               name="bill-amount"
