Now the styling is really fixed. I got the top and bottom border of the column-left to line up with the column-right

--- a/index.html
+++ b/index.html
@@ -4,18 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
 
     <title>Frontend Mentor | Tip calculator app</title>
@@ -28,13 +20,8 @@
         </div>
         <section>
           <div class="column-left">
-            <p class="exclude">Bill</p>
-            <input
-              type="number"
-              name="bill-amount"
-              class="bill-amount"
-              placeholder=""
-            />
+            <p>Bill</p>
+            <input type="number" name="bill-amount" class="bill-amount" placeholder="" />
             <p>Select Tip %</p>
             <div class="tip-percentages">
               <input class="tip-percentage" type="button" value="5%" />
@@ -42,22 +29,10 @@
               <input class="tip-percentage" type="button" value="15%" />
               <input class="tip-percentage" type="button" value="25%" />
               <input class="tip-percentage" type="button" value="50%" />
-              <input
-                class="tip-percentage"
-                type="number"
-                name=""
-                id="tip-percentage-custom"
-                placeholder="Custom"
-              />
+              <input class="tip-percentage" type="number" name="" id="tip-percentage-custom" placeholder="Custom" />
             </div>
-
             <p>Number of People</p>
-            <input
-              type="number"
-              name=""
-              class="number-of-people"
-              placeholder=""
-            />
+            <input type="number" name="" class="number-of-people" placeholder="" />
           </div>
           <div class="column-right">
             <div class="tip-container">
